# crous

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN_RISKS.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: bench.yml  ci.yml  python-publish.yml
bench/: Cargo.toml
bench/python/: bench_crous.py
bench/src/: datasets.rs  lib.rs  main.rs  metrics.rs  report.rs  runner.rs
crous-cli/: Cargo.toml
crous-cli/src/: main.rs
crous-compression/: Cargo.toml
crous-compression/src/: lib.rs
crous-core/: Cargo.toml
crous-core/benches/: codec_bench.rs
crous-core/src/: block.rs  checksum.rs  decoder.rs  encoder.rs  error.rs  header.rs  lib.rs  limits.rs  text.rs  traits.rs  value.rs  varint.rs  wire.rs
crous-core/tests/: adversarial.rs  proptest.rs  proptest_extended.rs  roundtrip.rs  stress.rs
crous-derive/: Cargo.toml
crous-derive/src/: lib.rs
crous-derive/tests/: derive_types.rs
crous-ffi/: Cargo.toml  crous.h  test_crous.c
crous-ffi/src/: lib.rs
crous-io/: Cargo.toml
crous-io/src/: lib.rs
crous-python/: Cargo.toml  _crous_native.pyi  build.rs  pyproject.toml
crous-python/src/: lib.rs
crous-python/tests/: test_native.py
crous-simd/: Cargo.toml
crous-simd/src/: lib.rs
docs/: PYTHON_API.md  RUST_API.md  SPEC.md  TEXT_FORMAT.abnf
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_block.rs  fuzz_compress_corrupt.rs  fuzz_decode.rs  fuzz_dedup.rs  fuzz_limits.rs  fuzz_roundtrip.rs  fuzz_string_dict.rs  fuzz_text.rs  fuzz_varint.rs
python/: pyproject.toml
python/crous/: __init__.py  decoder.py  encoder.py  error.py  text.py  value.py  varint.py  wire.py
python/tests/: test_crous.py
