[workspace]
members = [
    "crous-core",
    "crous-derive",
    "crous-io",
    "crous-cli",
    "crous-compression",
    "crous-ffi",
    "crous-simd",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Crous Contributors"]
repository = "https://github.com/crous-format/crous"
description = "A compact, canonical binary serializer and human-readable alternative to JSON"
rust-version = "1.85.0"

[workspace.dependencies]
crous-core = { path = "crous-core", version = "0.1.0" }
crous-derive = { path = "crous-derive", version = "0.1.0" }
crous-compression = { path = "crous-compression", version = "0.1.0" }
crous-io = { path = "crous-io", version = "0.1.0" }
crous-ffi = { path = "crous-ffi", version = "0.1.0" }
crous-simd = { path = "crous-simd", version = "0.1.0" }
thiserror = "2"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
base64 = "0.22"
