[package]
name = "crous-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core encoder/decoder, block framing, and Value types for the Crous binary format"

[dependencies]
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "codec_bench"
harness = false
