[package]
name = "crous-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macro derive for Crous schema-bound types with stable field IDs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
xxhash-rust = { workspace = true }

[dev-dependencies]
crous-core = { workspace = true }
