[package]
name = "crous-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async IO adapters, framed streams, and mmap reader for Crous"

[dependencies]
crous-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
