[package]
name = "crous-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async IO adapters, framed streams, and mmap reader for Crous"

[features]
default = []
# Memory-mapped zero-copy reader: https://docs.rs/memmap2
mmap = ["dep:memmap2"]

[dependencies]
crous-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
