[package]
name = "crous-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "PyO3 Python bindings for the Crous encoder/decoder"
publish = false
rust-version.workspace = true

[lib]
name = "_crous_native"
crate-type = ["cdylib"]

[dependencies]
crous-core = { workspace = true }
pyo3 = { version = "0.28", features = ["extension-module"] }
