[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "crous-native"
version = "0.1.0"
description = "Native Rust-backed encoder/decoder for the Crous binary format"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
